# crypto.me-thirdweb

./: .env  .gitignore  AGENTS.md  ARCHITECTURE.md  DOCUMENTATION.md  FEATURES.md  README.md  debug_output.txt  fix_database.sh  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  reset_database.sh  tailwind.config.ts  tsconfig.json  vercel.json
app/: layout.tsx
lib/: prisma.ts
prisma/: data.db  schema.prisma
prisma/migrations/20240925001954_initial_setup/: migration.sql
prisma/migrations/20241002131758_init/: migration.sql
scripts/: clear_cache.js  register-ts.js  test_architecture_doc.js  with-database-url.js
src/__tests__/api/: fast-profile.test.ts
src/app/: page.tsx
src/backend/: pyproject.toml
src/backend/backend/: app.py  config.py
src/components/: FastServiceCards.tsx  ServiceCards.tsx
src/components/legacy/: ServiceCards.tsx
src/hooks/: useFastProfile.ts
src/lib/: cacheStore.ts
src/pages/: [ens].tsx  _app.tsx  ens.tsx  index.tsx
src/pages/api/: debug-db.ts  debug-prisma.ts  fast-profile.ts  health.ts  profile.ts  queue.ts  recent-profiles.ts  test-profile.ts
src/pages/api/__tests__/: fast-profile.test.ts
src/pages/api/services/: alchemy.ts  debank.ts  decentraland.ts  ens.ts  farcaster.ts  gitcoin-passport.ts  icebreaker.ts  opensea.ts  xmtp.ts  zerion.ts
tests/: e2e-no-demo-data.test.ts  service-collectors.test.ts
